--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       <section>
          <ul>
              <li>
-                <h2>Внимание к деталям</h2>
+                <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
              </li>
             <li>
-                <h2>Пунктуальность</h2>
+                <h3>Пунктуальность</h3>
                 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
              </li>
              <li>
-                <h2>Планирование</h2>
+                <h3>Планирование</h3>
                 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
              </li>
              <li>
-                <h2>Современные технологии</h2>
+                <h3>Современные технологии</h3>
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
              </li>
           </ul>
@@ -56,9 +56,9 @@
       <section>
           <h2>Чем мы занимаемся</h2>
           <ul>
-              <li><img src="./images/box-1.jpg" alt="rabota-v-planshete" width="370"></li>
-              <li><img src="./images/box-2.jpg" alt="mobilnii-prelogeniya" width="370"></li>
-              <li><img src="./images/box-3.jpg" alt="soti-v-planshete" width="370"></li>
+              <li><img src="./images/box-1.jpg" alt="работа на планшете" width="370"></li>
+              <li><img src="./images/box-2.jpg" alt="мобильные приложения" width="370"></li>
+              <li><img src="./images/box-3.jpg" alt="цветные соты на планшете" width="370"></li>
           </ul>
       </section>
 
@@ -66,19 +66,19 @@
       <section>
         <h2>Наша команда</h2>
           <ul>
-              <li><img src="./images/igor.jpg" alt="young-man-in-a-burgundy-shirt-and-glasses" width="270">
+              <li><img src="./images/igor.jpg" alt="парень в очках с бородой и в бордовой рубашке" width="270">
                 <h3>Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
               </li>                
-              <li><img src="./images/olga.jpg" alt="business-girl-with-blond-hair-and-glasses" width="270">
+              <li><img src="./images/olga.jpg" alt="бизнесс блондинка в очках" width="270">
                  <h3>Ольга Репина</h3>
                  <p lang="en">Frontend Developer</p>
               </li>
-              <li><img src="./images/nicolai.jpg" alt="young-man-in-white-shirt" width="270">
+              <li><img src="./images/nicolai.jpg" alt="парень в белой рубашке" width="270">
                  <h3>Николай Тарасов</h3>
                  <p lang="en">Marketing</p>  
               </li>
-              <li><img src="./images/mihael.jpg" alt="young-man-in-black-t-shirt-and-glasses" width="270">
+              <li><img src="./images/mihael.jpg" alt="парень в черной футболке и в очках" width="270">
                  <h3>Михаил Ермаков</h3>
                  <p lang="en">UI Designer</p> 
               </li>
